tascatyYAMLs/nginx/nginx-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-server-cluster-ip-service
  namespace: web-server
spec:
  type: ClusterIP
  selector:
    component: web-server
  ports:
    - port: 8080
      targetPort: 8080
