tascatyYAMLs/nginx/nginx-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tascatyk8s-app-ingress
  namespace: web-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: nginx-web-server-cluster-ip-service
           port:
            number: 8080
